// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressTracker renders as expected 1`] = `
.c0 {
  display: flex;
  width: 100%;
  flex-flow: row nowrap;
  align-items: flex-start;
  justify-content: space-between;
  padding-left: 0;
  margin-left: 0;
  background-image: linear-gradient(     to right,     #444 0%,     #444       0%,     #c5c5c5       0%,     #c5c5c5 100%   );
  background-position: 0 21px;
  background-repeat: no-repeat;
  background-size: 100% 3px;
  counter-reset: progress-tracker-counter;
}

.c2 {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  padding: 0;
  border: none;
  margin-top: 12.5px;
  background: none;
  counter-increment: progress-tracker-counter;
  font-family: 'Source Sans Pro',sans-serif;
  text-align: center;
}

.c2:active,
.c2:hover,
.c2:focus {
  outline: none;
}

.c2 span {
  display: none;
  color: #444;
  font-size: 18px;
  line-height: 1.1em;
}

.c2::before {
  position: relative;
  display: block;
  width: 20px;
  height: 20px;
  box-sizing: border-box;
  border: 1px solid #c5c5c5;
  border-radius: 20px;
  margin-bottom: 5px;
  background-color: white;
  box-shadow: 0 0 0 3px white;
  color: #444;
  content: counter(progress-tracker-counter);
  font-size: 16px;
  line-height: 1em;
  text-align: center;
}

.c3 {
  margin-top: 0;
}

.c3::before {
  width: 45px;
  height: 45px;
  border: 5px solid #c110a0;
  border-radius: 45px;
  color: #c110a0;
  font-size: 21.96px;
  font-weight: bold;
  line-height: 1.5em;
}

.c3 span {
  display: inline;
  color: #c110a0;
  font-weight: bold;
}

.c1 {
  display: flex;
  max-width: 50%;
  align-items: center;
  list-style-type: none;
}

.c1:first-child,
.c1:first-child button {
  align-items: flex-start;
  text-align: left;
}

.c1:last-child,
.c1:last-child button {
  align-items: flex-end;
  text-align: right;
}

@media (min-width: 768px) {
  .c0 {
    background-position: center 19px;
    background-size: 66.66666666666667% 3px;
  }
}

@media (min-width: 768px) {
  .c2 {
    margin: 0 auto;
    margin-top: 0;
    font-size: 18px;
  }
}

@media (min-width: 768px) {
  .c2 span {
    display: inline;
    font-weight: normal;
  }
}

@media (min-width: 768px) {
  .c2::before {
    width: 41px;
    height: 41px;
    border-width: 3px;
    border-radius: 41px;
    font-size: 20.008px;
    font-weight: normal;
    line-height: 1.7em;
  }
}

@media (min-width: 768px) {
  .c3::before {
    width: 41px;
    height: 41px;
    border-width: 5px;
    font-size: 20.008px;
    line-height: 1.5em;
  }
}

@media (min-width: 768px) {
  .c3 span {
    font-weight: bold;
  }
}

@media (min-width: 768px) {
  .c1 {
    width: 33.33333333333333%;
  }

  .c1:first-child,
  .c1:last-child,
  .c1:first-child button,
  .c1:last-child button {
    align-items: center;
    text-align: center;
  }
}

<ol
  class="c0"
  data-testid="progress-tracker"
>
  <li
    class="c1"
  >
    <button
      aria-labelledby="1-span"
      class="c2 c3"
      disabled=""
      id="1"
    >
      <span
        id="1-span"
      >
        step 1
      </span>
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      aria-labelledby="2-span"
      class="c2"
      disabled=""
      id="2"
    >
      <span
        id="2-span"
      >
        step 2
      </span>
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      aria-labelledby="3-span"
      class="c2"
      disabled=""
      id="3"
    >
      <span
        id="3-span"
      >
        step 3
      </span>
    </button>
  </li>
</ol>
`;

exports[`ProgressTracker renders as expected 2`] = `
.c0 {
  display: flex;
  width: 100%;
  flex-flow: row nowrap;
  align-items: flex-start;
  justify-content: space-between;
  padding-left: 0;
  margin-left: 0;
  background-image: linear-gradient(     to right,     #444 0%,     #444       50%,     #c5c5c5       50%,     #c5c5c5 100%   );
  background-position: 0 21px;
  background-repeat: no-repeat;
  background-size: 100% 3px;
  counter-reset: progress-tracker-counter;
}

.c2 {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  padding: 0;
  border: none;
  margin-top: 12.5px;
  background: none;
  counter-increment: progress-tracker-counter;
  font-family: 'Source Sans Pro',sans-serif;
  text-align: center;
}

.c2:active,
.c2:hover,
.c2:focus {
  outline: none;
}

.c2 span {
  display: none;
  color: #444;
  font-size: 18px;
  line-height: 1.1em;
}

.c2::before {
  position: relative;
  display: block;
  width: 20px;
  height: 20px;
  box-sizing: border-box;
  border: 1px solid #c5c5c5;
  border-radius: 20px;
  margin-bottom: 5px;
  background-color: white;
  box-shadow: 0 0 0 3px white;
  color: #444;
  content: counter(progress-tracker-counter);
  font-size: 16px;
  line-height: 1em;
  text-align: center;
}

.c3 {
  cursor: pointer;
}

.c3:hover::before {
  box-shadow: rgba(0, 0, 0, 0.35) 0 0 3px 1px;
}

.c3:active span,
.c3:hover span,
.c3:focus span {
  text-decoration: underline;
}

.c3:focus::before {
  box-shadow: #83bffc 0 0 4px 2px;
}

.c3:focus span {
  outline: 1px dotted #83bffc;
}

.c3::before {
  border-color: #444;
}

.c4 {
  margin-top: 0;
}

.c4::before {
  width: 45px;
  height: 45px;
  border: 5px solid #c110a0;
  border-radius: 45px;
  color: #c110a0;
  font-size: 21.96px;
  font-weight: bold;
  line-height: 1.5em;
}

.c4 span {
  display: inline;
  color: #c110a0;
  font-weight: bold;
}

.c1 {
  display: flex;
  max-width: 50%;
  align-items: center;
  list-style-type: none;
}

.c1:first-child,
.c1:first-child button {
  align-items: flex-start;
  text-align: left;
}

.c1:last-child,
.c1:last-child button {
  align-items: flex-end;
  text-align: right;
}

@media (min-width: 768px) {
  .c0 {
    background-position: center 19px;
    background-size: 66.66666666666667% 3px;
  }
}

@media (min-width: 768px) {
  .c2 {
    margin: 0 auto;
    margin-top: 0;
    font-size: 18px;
  }
}

@media (min-width: 768px) {
  .c2 span {
    display: inline;
    font-weight: normal;
  }
}

@media (min-width: 768px) {
  .c2::before {
    width: 41px;
    height: 41px;
    border-width: 3px;
    border-radius: 41px;
    font-size: 20.008px;
    font-weight: normal;
    line-height: 1.7em;
  }
}

@media (min-width: 768px) {
  .c3::before {
    border-width: 5px;
    font-weight: bold;
    line-height: 1.5em;
  }
}

@media (min-width: 768px) {
  .c3 span {
    font-weight: bold;
  }
}

@media (min-width: 768px) {
  .c4::before {
    width: 41px;
    height: 41px;
    border-width: 5px;
    font-size: 20.008px;
    line-height: 1.5em;
  }
}

@media (min-width: 768px) {
  .c4 span {
    font-weight: bold;
  }
}

@media (min-width: 768px) {
  .c1 {
    width: 33.33333333333333%;
  }

  .c1:first-child,
  .c1:last-child,
  .c1:first-child button,
  .c1:last-child button {
    align-items: center;
    text-align: center;
  }
}

<ol
  class="c0"
  data-testid="progress-tracker"
>
  <li
    class="c1"
  >
    <button
      aria-labelledby="1-span"
      class="c2 c3"
      id="1"
    >
      <span
        id="1-span"
      >
        step 1
      </span>
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      aria-labelledby="2-span"
      class="c2 c4"
      disabled=""
      id="2"
    >
      <span
        id="2-span"
      >
        step 2
      </span>
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      aria-labelledby="3-span"
      class="c2"
      disabled=""
      id="3"
    >
      <span
        id="3-span"
      >
        step 3
      </span>
    </button>
  </li>
</ol>
`;

exports[`ProgressTracker renders as expected 3`] = `
.c0 {
  display: flex;
  width: 100%;
  flex-flow: row nowrap;
  align-items: flex-start;
  justify-content: space-between;
  padding-left: 0;
  margin-left: 0;
  background-image: linear-gradient(     to right,     #444 0%,     #444       100%,     #c5c5c5       100%,     #c5c5c5 100%   );
  background-position: 0 21px;
  background-repeat: no-repeat;
  background-size: 100% 3px;
  counter-reset: progress-tracker-counter;
}

.c2 {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  padding: 0;
  border: none;
  margin-top: 12.5px;
  background: none;
  counter-increment: progress-tracker-counter;
  font-family: 'Source Sans Pro',sans-serif;
  text-align: center;
}

.c2:active,
.c2:hover,
.c2:focus {
  outline: none;
}

.c2 span {
  display: none;
  color: #444;
  font-size: 18px;
  line-height: 1.1em;
}

.c2::before {
  position: relative;
  display: block;
  width: 20px;
  height: 20px;
  box-sizing: border-box;
  border: 1px solid #c5c5c5;
  border-radius: 20px;
  margin-bottom: 5px;
  background-color: white;
  box-shadow: 0 0 0 3px white;
  color: #444;
  content: counter(progress-tracker-counter);
  font-size: 16px;
  line-height: 1em;
  text-align: center;
}

.c3 {
  cursor: pointer;
}

.c3:hover::before {
  box-shadow: rgba(0, 0, 0, 0.35) 0 0 3px 1px;
}

.c3:active span,
.c3:hover span,
.c3:focus span {
  text-decoration: underline;
}

.c3:focus::before {
  box-shadow: #83bffc 0 0 4px 2px;
}

.c3:focus span {
  outline: 1px dotted #83bffc;
}

.c3::before {
  border-color: #444;
}

.c4 {
  margin-top: 0;
}

.c4::before {
  width: 45px;
  height: 45px;
  border: 5px solid #c110a0;
  border-radius: 45px;
  color: #c110a0;
  font-size: 21.96px;
  font-weight: bold;
  line-height: 1.5em;
}

.c4 span {
  display: inline;
  color: #c110a0;
  font-weight: bold;
}

.c1 {
  display: flex;
  max-width: 50%;
  align-items: center;
  list-style-type: none;
}

.c1:first-child,
.c1:first-child button {
  align-items: flex-start;
  text-align: left;
}

.c1:last-child,
.c1:last-child button {
  align-items: flex-end;
  text-align: right;
}

@media (min-width: 768px) {
  .c0 {
    background-position: center 19px;
    background-size: 66.66666666666667% 3px;
  }
}

@media (min-width: 768px) {
  .c2 {
    margin: 0 auto;
    margin-top: 0;
    font-size: 18px;
  }
}

@media (min-width: 768px) {
  .c2 span {
    display: inline;
    font-weight: normal;
  }
}

@media (min-width: 768px) {
  .c2::before {
    width: 41px;
    height: 41px;
    border-width: 3px;
    border-radius: 41px;
    font-size: 20.008px;
    font-weight: normal;
    line-height: 1.7em;
  }
}

@media (min-width: 768px) {
  .c3::before {
    border-width: 5px;
    font-weight: bold;
    line-height: 1.5em;
  }
}

@media (min-width: 768px) {
  .c3 span {
    font-weight: bold;
  }
}

@media (min-width: 768px) {
  .c4::before {
    width: 41px;
    height: 41px;
    border-width: 5px;
    font-size: 20.008px;
    line-height: 1.5em;
  }
}

@media (min-width: 768px) {
  .c4 span {
    font-weight: bold;
  }
}

@media (min-width: 768px) {
  .c1 {
    width: 33.33333333333333%;
  }

  .c1:first-child,
  .c1:last-child,
  .c1:first-child button,
  .c1:last-child button {
    align-items: center;
    text-align: center;
  }
}

<ol
  class="c0"
  data-testid="progress-tracker"
>
  <li
    class="c1"
  >
    <button
      aria-labelledby="1-span"
      class="c2 c3"
      id="1"
    >
      <span
        id="1-span"
      >
        step 1
      </span>
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      aria-labelledby="2-span"
      class="c2 c3"
      id="2"
    >
      <span
        id="2-span"
      >
        step 2
      </span>
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      aria-labelledby="3-span"
      class="c2 c4"
      disabled=""
      id="3"
    >
      <span
        id="3-span"
      >
        step 3
      </span>
    </button>
  </li>
</ol>
`;

exports[`ProgressTracker renders as expected 4`] = `
.c0 {
  display: flex;
  width: 100%;
  flex-flow: row nowrap;
  align-items: flex-start;
  justify-content: space-between;
  padding-left: 0;
  margin-left: 0;
  background-image: linear-gradient(     to right,     #444 0%,     #444       100%,     #c5c5c5       100%,     #c5c5c5 100%   );
  background-position: 0 21px;
  background-repeat: no-repeat;
  background-size: 100% 3px;
  counter-reset: progress-tracker-counter;
}

.c2 {
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  padding: 0;
  border: none;
  margin-top: 12.5px;
  background: none;
  counter-increment: progress-tracker-counter;
  font-family: 'Source Sans Pro',sans-serif;
  text-align: center;
}

.c2:active,
.c2:hover,
.c2:focus {
  outline: none;
}

.c2 span {
  display: none;
  color: #444;
  font-size: 18px;
  line-height: 1.1em;
}

.c2::before {
  position: relative;
  display: block;
  width: 20px;
  height: 20px;
  box-sizing: border-box;
  border: 1px solid #c5c5c5;
  border-radius: 20px;
  margin-bottom: 5px;
  background-color: white;
  box-shadow: 0 0 0 3px white;
  color: #444;
  content: counter(progress-tracker-counter);
  font-size: 16px;
  line-height: 1em;
  text-align: center;
}

.c3 {
  cursor: pointer;
}

.c3:hover::before {
  box-shadow: rgba(0, 0, 0, 0.35) 0 0 3px 1px;
}

.c3:active span,
.c3:hover span,
.c3:focus span {
  text-decoration: underline;
}

.c3:focus::before {
  box-shadow: #83bffc 0 0 4px 2px;
}

.c3:focus span {
  outline: 1px dotted #83bffc;
}

.c3::before {
  border-color: #444;
}

.c4 {
  margin-top: 0;
}

.c4::before {
  width: 45px;
  height: 45px;
  border: 5px solid #c110a0;
  border-radius: 45px;
  color: #c110a0;
  font-size: 21.96px;
  font-weight: bold;
  line-height: 1.5em;
}

.c4 span {
  display: inline;
  color: #c110a0;
  font-weight: bold;
}

.c1 {
  display: flex;
  max-width: 50%;
  align-items: center;
  list-style-type: none;
}

.c1:first-child,
.c1:first-child button {
  align-items: flex-start;
  text-align: left;
}

.c1:last-child,
.c1:last-child button {
  align-items: flex-end;
  text-align: right;
}

@media (min-width: 768px) {
  .c0 {
    background-position: center 19px;
    background-size: 66.66666666666667% 3px;
  }
}

@media (min-width: 768px) {
  .c2 {
    margin: 0 auto;
    margin-top: 0;
    font-size: 18px;
  }
}

@media (min-width: 768px) {
  .c2 span {
    display: inline;
    font-weight: normal;
  }
}

@media (min-width: 768px) {
  .c2::before {
    width: 41px;
    height: 41px;
    border-width: 3px;
    border-radius: 41px;
    font-size: 20.008px;
    font-weight: normal;
    line-height: 1.7em;
  }
}

@media (min-width: 768px) {
  .c3::before {
    border-width: 5px;
    font-weight: bold;
    line-height: 1.5em;
  }
}

@media (min-width: 768px) {
  .c3 span {
    font-weight: bold;
  }
}

@media (min-width: 768px) {
  .c4::before {
    width: 41px;
    height: 41px;
    border-width: 5px;
    font-size: 20.008px;
    line-height: 1.5em;
  }
}

@media (min-width: 768px) {
  .c4 span {
    font-weight: bold;
  }
}

@media (min-width: 768px) {
  .c1 {
    width: 33.33333333333333%;
  }

  .c1:first-child,
  .c1:last-child,
  .c1:first-child button,
  .c1:last-child button {
    align-items: center;
    text-align: center;
  }
}

<ol
  class="c0"
  data-testid="progress-tracker"
>
  <li
    class="c1"
  >
    <button
      aria-labelledby="1-span"
      class="c2 c3"
      id="1"
    >
      <span
        id="1-span"
      >
        step 1
      </span>
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      aria-labelledby="2-span"
      class="c2 c3"
      id="2"
    >
      <span
        id="2-span"
      >
        step 2
      </span>
    </button>
  </li>
  <li
    class="c1"
  >
    <button
      aria-labelledby="3-span"
      class="c2 c4"
      disabled=""
      id="3"
    >
      <span
        id="3-span"
      >
        step 3
      </span>
    </button>
  </li>
</ol>
`;
